--- a/marabou_redesign.org
+++ b/marabou_redesign.org
@@ -119,7 +119,7 @@ CLOSED: [2020-03-30 Mon 15:45]
 - Expectation: backtracks correctly with the _context
 - Q: Do we need a flexible variable size.
 - Basic functionality unit test
-**** 3c add BoundManager _boundManager memeber to the Engine 
+**** 3c add BoundManager _boundManager member to the Engine 
 - Expectation: single central object, visible to the SimplexEngine, bound tighteners, SmtCore 
 **** 4b mirror all bound update calls to _boundManager  
 - Expectation: _boundManager is in sync with bounds returned by the BoundTighteners 
